--- a/Week6/grid.css
+++ b/Week6/grid.css
@@ -1,29 +1,39 @@
 *{
     margin: 0;
     padding: 0;
-
-}
-
-.grid-container{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    background-color: rgb(150, 247, 150);
     
 }
-.grid-item{
-    background-color: bisque;
-    border: 3px solid #333;
+h1{
     padding: 30px;
-    font-size: 40px;
+    text-align: center;
+    font-size: 70px;
+    font-weight: 900;
+    font-family: 'Times New Roman', Times, serif;
+}
+section{
+    display: flex;
+    max-width: 800px;
+    padding: 0;
+}
+#one{
+    flex: 2;
+    padding: 230px;
     text-align: center;
 }
-.grid-item1, .grid-item4{
-    grid-column: span 4;
+#two{
+    flex: 2;
+    padding: 230px;
+    text-align: center;
 }
-.grid-item2{
-    grid-column: span 3;
-    grid-row: span 2;
+#three{
+    flex: 2;
+    padding: 230px;
+    text-align: center;
 }
-.grid-item3{
-    grid-row: span 2;
+h2{ 
+    margin-top: 20px;
+}
+li{
+    list-style: none;
 }
